// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TabsPanel should render 1`] = `
<div
  aria-hidden={true}
  aria-labelledby="tab"
  className="cf-tabs__panel"
  role="tabpanel"
>
  TabsPanel
</div>
`;

exports[`TabsPanel should render active 1`] = `
<div
  aria-hidden={false}
  aria-labelledby="tab"
  className="cf-tabs__panel"
  role="tabpanel"
>
  TabsPanel
</div>
`;
